# Meta-AI-Agent

./: .gitignore  dev_standards.md  main.py  package-lock.json  pyproject.toml  ui.py  ui_standards.md
agent_registry/agent_builder__9597d5b8/v1/: agent.py
agent_registry/cricket_score_agent__c3114cec/v1/: agent.py  ui.html
agent_registry/health_tracker__529c1ae3/v1/: agent.py  ui.html
agent_registry/mental_health_agent__23cd1368/v1/: agent.py  ui.html
agent_registry/mental_health_agent__23cd1368/v2/: agent.py  ui.html
agent_registry/mental_health_assistant__490ef826/v1/: agent.py  ui.html
agent_registry/study_agent__7c1b4f88/v1/: agent.py  ui.html
agent_registry/travel_agent__8ca1933e/v2/: ui.html
agent_registry/travel_agent__8ca1933e/v3/: ui.html
agent_registry/travel_agent__8ca1933e/v4/: agent.py  ui.html
agent_registry/weather_tracker__fd6e0702/v1/: agent.py  ui.html
app/: main.py
app/agents/: code_fixes.py  coder_tools.py  graph.py  persistence.py  realtime_detector.py  schema.py  test2.py  tools.py
app/core/: config.py  database.py  parser.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/examples/: page.tsx
frontend/app/how-it-works/: page.tsx
frontend/components/: ChatBot.tsx  InlineChat.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/lib/: api.ts
