[project]
name = "my-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.8",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.0",
    "langchain-openrouter>=0.2.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]
